--- a/style.css
+++ b/style.css
@@ -110,7 +110,7 @@ ul li span:hover{
 
 }
 
-@media (min-width: 600px) and (max-width: 768px) {
+/* @media (min-width: 600px) and (max-width: 768px) {
     .todo-list {
         padding: 15px 10px 30px;
         margin: 45px auto 5px;
@@ -137,33 +137,5 @@ ul li span:hover{
         font-size: 25px;
         line-height: 25px;
     }
-}
-
-@media (max-width: 600px)   {
-    .todo-list {
-        padding: 5px 5px 15px;
-        margin: 25px auto 1px;
-    }
-
-    .row {
-        padding-left: 5px;
-    }
-
-    button {
-        padding: 5px 5px;
-        font-size: 5px;
-    }
-
-    ul li {
-        font-size: 8px;
-        padding: 3px 1px 3px 25px;
-    }
-
-    ul li span {
-        width: 20px;
-        height: 20px;
-        font-size: 15px;
-        line-height: 20px;
-    }
-}
+} */
 
